code added to generate descriptions

--- a/main.ipynb
+++ b/main.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
+      "name": "main.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOAwS6rYhixoelBbpOy3cfz"
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMqyQvqN3Xw5ViU6SnwPI9J"
     },
     "kernelspec": {
       "name": "python3",
@@ -22,7 +23,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "cdd1b6e6-ee73-438a-f8ab-659d10c7a366"
+        "outputId": "1914dfbe-72d5-474c-d6a4-c60162374b78"
       },
       "source": [
         "from os import listdir\n",
@@ -39,7 +40,7 @@
         "from keras.applications.vgg16 import preprocess_input\n",
         "from keras.models import Model"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,6 +102,92 @@
         "features = feature_extraction(directory)\n",
         "print('Number of Features Extracted:', len(features))\n",
         "dump(features, open('features.pkl', 'wb'))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Sg9ENkEZeRdq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#extracting and cleaning up the descriptions\n",
+        "def load_file(name):\n",
+        "\tf = open(name, 'r')\n",
+        "\ttxt = f.read()\n",
+        "\tf.close()\n",
+        "\treturn txt\n",
+        "\n",
+        "\n",
+        "def extract_descriptions(file):\n",
+        "\td_map = {}\n",
+        "\tfor r in file.split('\\n'):\n",
+        "\t\tword = r.split()\n",
+        "\t\tif len(r) < 2:\n",
+        "\t\t\tcontinue\n",
+        "\t\timg_id, img_desc = word[0], word[1:]\n",
+        "\t\timg_id = img_id.split('.')[0]\n",
+        "\t\timg_desc = ' '.join(img_desc)\n",
+        "\t\tif img_id not in d_map:\n",
+        "\t\t\td_map[img_id] = []\n",
+        "\t\td_map[img_id].append(img_desc)\n",
+        "\treturn d_map\n",
+        "\n",
+        "def get_vocab(text):\n",
+        "\tdoc = set()\n",
+        "\tfor k in text.keys():\n",
+        "\t\t[doc.update(txt.split()) for txt in text[k]]\n",
+        "\treturn doc\n",
+        "\n",
+        "def proc_descriptions(text):\n",
+        "\tlemma = str.maketrans('', '', string.punctuation)\n",
+        "\tfor key, desc_list in text.items():\n",
+        "\t\tfor word in range(len(desc_list)):\n",
+        "\t\t\tdesc = desc_list[word].split()\n",
+        "\t\t\tdesc = [w for w in desc if len(w)>1]\n",
+        "\t\t\tdesc = [w.lower() for w in desc]\n",
+        "\t\t\tdesc = [w for w in desc if w.isalpha()]\n",
+        "\t\t\tdesc = [w.translate(lemma) for w in desc]\n",
+        "\t\t\tdesc_list[word] =  ' '.join(desc)\n",
+        "\n",
+        "\n",
+        "def save_desc(text, name):\n",
+        "\trow = []\n",
+        "\tfor k, txt in text.items():\n",
+        "\t\tfor word in txt:\n",
+        "\t\t\trow.append(k + ' ' + word)\n",
+        "\tlemma = '\\n'.join(row)\n",
+        "\tf = open(name, 'w')\n",
+        "\tf.write(lemma)\n",
+        "\tf.close()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0q6qlmu0ejqp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "tokenfile = 'Flickr8k_text/Flickr8k.token.txt'\n",
+        "# loading token file\n",
+        "tokens = load_file(tokenfile)\n",
+        "# extracting descriptions\n",
+        "descriptions = extract_descriptions(tokens)\n",
+        "print('Loaded Descriptions:', len(descriptions))\n",
+        "# processing\n",
+        "proc_descriptions(descriptions)\n",
+        "# creating vocabulary\n",
+        "vocab = get_vocab(descriptions)\n",
+        "print('Size of Vocabulary:', len(vocab))\n",
+        "# saving descriptions file\n",
+        "save_desc(descriptions, 'descriptions.txt')"
       ],
       "execution_count": 0,
       "outputs": []
